# GenerativeAI_Projects

./: README.md
Hybrid_Search/: .gitignore  README.md  main.py  requirements.txt
Project_to_connect_ollama/: index.py
auto-complete/: README.md
auto-complete/UI/: ckeditor.html  index.html  main.js
auto-complete/backend/: app.py  queryModel.py  requirements.txt
chatbot-langgraph/: pyproject.toml  requirement.txt
chatbot-langgraph/basicChatbot/: AgenticChatBot.ipynb  StreamingChatbot.ipynb  basicChatbot.ipynb
chatbot-langgraph/mcpServer/: chat.py  mathserver.py  weather.py
chatbot_sql_RAG/: .gitignore  README.md  database.py  loadCSV.py  main.py  model.py  pyproject.toml  querySQLDBwithLLM.py  readme.md  requirements.txt
chatbot_sql_RAG/csv/: hospital_patients.csv
github_readme_BE/: .env  .gitignore  README.md
github_readme_BE/src/utility/: config.py  llm_util.py
local_ai_agent/: main.py  test.py  vector.py
local_ai_agent/chroma_langchain_db/: chroma.sqlite3
pdf_qa/: app.py  pdf_rag_utils.py  requirement.txt
